crates/search/tests/dumps/snapshots/mod.rs/import_dump_v2_rubygems_with_settings/1.snap
---
source: crates/indexsearch/tests/dumps/mod.rs
---
{
  "results": [
    {
      "uid": 0,
      "batchUid": null,
      "indexUid": "rubygems",
      "status": "succeeded",
      "type": "settingsUpdate",
      "canceledBy": null,
      "details": {
        "displayedAttributes": [
          "name",
          "summary",
          "description",
          "version",
          "total_downloads"
        ],
        "searchableAttributes": [
          "name",
          "summary"
        ],
        "filterableAttributes": [
          "version"
        ],
        "rankingRules": [
          "typo",
          "words",
          "fame:desc",
          "proximity",
          "attribute",
          "exactness",
          "total_downloads:desc"
        ]
      },
      "error": null,
      "duration": "PT0.008886S",
      "enqueuedAt": "2021-09-08T08:40:28.660188Z",
      "startedAt": "2021-09-08T08:40:28.660766Z",
      "finishedAt": "2021-09-08T08:40:28.669652Z"
    }
  ],
  "total": 1,
  "limit": 1,
  "from": 0,
  "next": null
}
